# codage-huffman

./: .gitignore  CMakeLists.txt  README.md
src/: binary_tree.c  binary_tree.h  huffman.c  huffman.h  main.c  occurrence.c  occurrence.h
tests/: main.c  test_occurrence.c  test_occurrence.h
